<resources>
    <string name="app_name">Snapcast</string>
    <string name="ticker_text">Snapclient started</string>
    <string name="notification_title">Snapclient</string>
    <string name="notification_text">Snapclient is running...</string>
    <string name="notification_info">info...</string>
    <string name="stop">stop</string>
    <string name="menu_details">Details</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_group">Group</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_snapcast">Snapcast</string>

    <string name="action_about">About...</string>
    <string name="action_settings">Settings...</string>
    <string name="action_scan">Scan for server</string>
    <string name="action_refresh">Refresh client list</string>
    <string name="action_hide_offline">Hide offline clients</string>

    <string name="title_activity_client_settings">Client settings</string>
    <string name="client_name">Name</string>
    <string name="client_mac">MAC</string>
    <string name="client_id">ID</string>
    <string name="client_ip">IP</string>
    <string name="client_host">Host</string>
    <string name="client_os">Operating system</string>
    <string name="client_version">Version</string>
    <string name="client_last_seen">Last seen</string>
    <string name="client_latency">Latency</string>
    <string name="online">online</string>

    <string name="title_activity_group_preference">Group settings</string>

    <string name="action_play_stop">Play/Stop</string>
    <string name="client_deleted">Client %1$s deleted</string>
    <string name="wrong_sample_rate">Stream not in native sample rate: %1$d\nNative sample rate: %2$d</string>
    <string name="unknown_sample_rate">Streams in non-native sample rate might not play in sync</string>
    <string name="undo_string">undo</string>
    <string name="title_activity_about">About</string>
    <string name="about_file">files/about.html</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="client_stream">Stream</string>
    <string name="first_run_title">Warning</string>
    <string name="first_run_text">This is just a test client.\nNot meant for production use.</string>
    <string name="host">Host</string>
    <string name="streaming_port">stream port</string>
    <string name="control_port">control port</string>
    <string name="server_host">Snapserver host</string>
    <string name="auto_start">Auto start Snapclient</string>
    <string name="connect">Connect</string>
</resources>

